--- a/src/containers/GetName/styles.css
+++ b/src/containers/GetName/styles.css
@@ -1,9 +1,16 @@
 .username-card {
   width: 20%;
-  margin: auto;
+  background-color: white;
+  padding: 24px;
+  border-radius: 4px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .get-name-background {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
   width: 100vw;
   background-image: url("https://spaceflight.nasa.gov/gallery/images/station/crew-7/hires/iss007e10807.jpg");
