--- a/src/containers/MainGame/styles.css
+++ b/src/containers/MainGame/styles.css
@@ -3,6 +3,8 @@
   height: 100vh;
   max-width: 100%;
   background-color: black;
+  color: #d26e16;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .game-window-container {
@@ -18,14 +20,38 @@
   color: white;
 }
 
+.game-status-container {
+  padding: 0px 8px 0px;
+  width: 30%;
+}
+
+.game-status-title {
+  color: #d26e16;
+  font-size: 1.5em;
+  margin: 0px;
+  padding: 0px;
+}
+
+.game-cargo-container {
+  border: 1px #d26e16 solid;
+  height: 40%;
+  padding: 4px;
+}
+
+.game-status-text-container {
+  border: 1px #d26e16 solid;
+  height: 60%;
+  margin-top: 8px;
+  padding: 4px;
+}
+
 .render-container {
   border: 1px #d26e16 solid;
   width: 70%;
   height: 100%;
+  padding: 4px;
 }
 
 .game-title {
-  color: #d26e16;
-  font-family: "Times New Roman", Times, serif;
   padding-left: 8px;
 }
